# MobileRobots

./: README.md  make_eclipse  readme  readme.md  start.sh
cart_launch/: CMakeLists.txt  package.xml
cart_launch/launch/: cart.launch
cart_launch/worlds/: far_empty.world  simple.world  terrain.world
docker/: .bashrc  attach_docker  attach_root  build_docker  create_user  pull_docker  start_docker  stop_docker
docker/dockerfile/: Dockerfile
gazebo8_with_ros_docker/: Dockerfile
gazebo9_with_ros_docker/: Dockerfile
laser2d_map/: CMakeLists.txt  package.xml
laser2d_map/config/: rosconsole.config
laser2d_map/launch/: laser_map.launch  laser_map.xml  laser_map.yaml
laser2d_map/src/: laser2d_map.cpp  laser_map.cpp  laser_map.h
mr_ws/: build.sh  start.sh
mr_ws/src/: README.md  build.sh
mr_ws/src/barrel_slam/: CMakeLists.txt  package.xml  readme.md
mr_ws/src/barrel_slam/launch/: slam.launch  slam.rviz
mr_ws/src/barrel_slam/src/: slam.cpp  slam.h  slam_node.cpp
mr_ws/src/cart_launch/launch/: cart.launch  cart_stage.launch
mr_ws/src/cart_launch/stage_worlds/: cave.yaml  empty.world  feature_map.world  feature_map_simple.world  kalman_map.world  mapping.world  mr.inc  sick.inc  sick20.inc
mr_ws/src/cart_launch/worlds/: cart_empty.world  populated.world  simple  slam.world
mr_ws/src/feature_matcher/: CMakeLists.txt  package.xml  readme.md
mr_ws/src/feature_matcher/launch/: matcher.launch  matcher.rviz
mr_ws/src/feature_matcher/src/: feature_matcher.cpp  matcher.cpp  matcher.h
mr_ws/src/mpc_controller/: CMakeLists.txt  README.md  package.xml
mr_ws/src/mpc_controller/config/: rosconsole.config
mr_ws/src/mpc_controller/include/: mpc.h
mr_ws/src/mpc_controller/launch/: controller.launch  controller.yaml  controller_stage.launch
mr_ws/src/mpc_controller/rqt/: steer_error.perspective
mr_ws/src/mpc_controller/rviz/: traj.rviz
mr_ws/src/mpc_controller/src/: mpc.cpp  mpccontroller.cpp  mpccontroller.h  mpccontroller_node.cpp  solve_mpc.cpp
mr_ws/src/mpc_controller/test/: mpc_test.cpp
mr_ws/src/odo2tf/: CMakeLists.txt
mr_ws/src/polaris_ranger_ev/: package.xml
mr_ws/src/polaris_ranger_ev/model/: scan_cart.sdf  simple_cart.sdf
mr_ws/src/simple_controller/: CMakeLists.txt  README.md
mr_ws/src/simple_controller/cfg/: ControllerDynReconf.cfg  steer_error.perspective
mr_ws/src/simple_controller/config/: rosconsole.config
mr_ws/src/simple_controller/include/: trajectory_segment.h
mr_ws/src/simple_controller/launch/: controller.yaml  controller1s.yaml  controller_stage.launch  slam.launch  start_gzclient  start_rqt
mr_ws/src/simple_controller/rviz/: traj.rviz
mr_ws/src/simple_controller/src/: controller.cpp  controller.h  trajectory_segment.h
mr_ws/src/simple_map/: CMakeLists.txt  readme.md
mr_ws/src/simple_map/launch/: map.launch
mr_ws/src/simple_map/src/: simple_map.cpp
mr_ws/src/simple_planner/: CMakeLists.txt  README.md  package.xml
mr_ws/src/simple_planner/launch/: cave.yaml  planner.launch  planner.rviz
mr_ws/src/simple_planner/src/: planner.cpp  planner.h  simple_planner.cpp
mr_ws/src/stage_controller/: CMakeLists.txt  package.xml
mr_ws/src/stage_controller/src/: stage_controller.cpp  stage_throttle.cpp
mr_ws/src/vehicle_ros_plugin/: doc.Doxyfile
mr_ws/src/vehicle_ros_plugin/html/: annotated.html  classgazebo_1_1VehicleRosPlugin-members.html  classgazebo_1_1VehicleRosPlugin.html  functions.html  functions_func.html  hierarchy.html  index.html
mr_ws/src/vehicle_ros_plugin/src/: VehicleRosPlugin.cpp  VehicleRosPlugin.h
mr_ws/src/velocity_controller/: CMakeLists.txt  README.md  package.xml
mr_ws/src/velocity_controller/launch/: controller.launch  test.launch  throttle_cart.launch  vel_error.perspective
mr_ws/src/velocity_controller/src/: velocity_controller.cpp  velocity_test.cpp
odo2tf/: package.xml
odo2tf/src/: odo2tf.cpp
polaris_ranger_ev/: CMakeLists.txt
polaris_ranger_ev/model/: model.config  model.sdf  model_inc.sdf  scan_cart.sdf
simple_controller/: CMakeLists.txt  package.xml
simple_controller/cfg/: steer_error.perspective
simple_controller/launch/: controller.launch  controller.yaml  controller_curv.yaml  start_gzclient  start_rqt
simple_controller/rviz/: traj.rviz
simple_controller/src/: controller.cpp  controller.h  controller_node.cpp  trajectory.h
vehicle_ros_plugin/: CMakeLists.txt  package.xml
vehicle_ros_plugin/html/: VehicleRosPlugin_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html
vehicle_ros_plugin/src/: VehicleRosPlugin.cpp  VehicleRosPlugin.h
velocity_controller/: CMakeLists.txt  package.xml
velocity_controller/config/: rosconsole.config
velocity_controller/include/velocity_controller/: point_trajectory.h
velocity_controller/launch/: velocity_controller.launch
velocity_controller/src/: main.cpp  point_trajectory.cpp  velocity_controller.cpp  velocity_controller.h
velocity_controller/test/: point_trajectory_test.cpp
